[package]
name = "maxwell"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.27.0", features = [ "simd-stable", "debug-render-2d" ] }
bevy-inspector-egui = "0.27.0"
bevy_ecs_ldtk = "0.10.0"
rand = "0.8.5"
bevy_derive = "0.14.2"
